# TestBot

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  lol  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: all-green-gate-summary.json  architecture-boundary-report.current.json  architecture-boundary-report.current.md  architecture-boundary-report.main-head.json  failed-main-head.txt  feature-status-summary.json  issue-0011-mixed-session.jsonl  issue-0011-turn-analytics-summary.json  issue-0011-turn-analytics.jsonl  main-head-failure-clusters.md  main-head-first-failure-boundaries.md  main-head-regression-chain.md  main-head-regression-classification.md  main-head-repair-order.md  pytest-main-head.txt  seeded_retrieval_failure_counts.json
config/: kpi_guardrails.json  rerank_objective.json
docs/: architecture-boundaries.md  architecture.md  feature-runtime-test-traceability.md  invariants.md  issues.md  ops.md  pivot.md  quickstart.md  regression-progression-audit-8f9317a-to-head.md  reject-taxonomy.md  style-guide.md  terminology.md  testing-triage.md  testing.md
eval/: cases.jsonl
examples/: Experiments.md  seem_bot.py
features/: README.md  answer_contract.feature  capabilities.feature  intent_grounding.feature  memory_recall.feature  source_ingestion.feature  startup_status.feature  time_awareness.feature
scripts/: aggregate_turn_analytics.py  all_green_gate.py  architecture_boundary_report.py  eval_recall.py  generate_red_tag_index.py  governance_base_ref.py  governance_rules.py  ingest_grounding_sources.py  release_gate.py  report_feature_status.py  suggest_issue_links.py  sync_invariants_mirror.py  triage_router.py  validate_invariant_sync.py  validate_issue_links.py  validate_issues.py  validate_kpi_guardrails.py  validate_log_schema.py  validate_markdown_paths.py  validate_pipeline_stage_conformance.py  validate_roadmap_consistency.py  verification_manifest_contract.py
tests/: __init__.py  conftest.py  live_smoke_support.py  test_all_green_gate.py  (+84 more)
(+242 files in other folders)
